k8s/dev/backend_customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "Image feralexis007/manantial-customers-service:dev-d8fee31"
  name: backend-customer-deployment-dev
  labels:
    app: back-customer-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-customer-dev
  template:
    metadata:
      labels:
        app: back-customer-dev
    spec:
      containers:
        - name: customers-service
          image: feralexis007/manantial-customers-service:dev-d8fee31
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-customer-service-dev
spec:
  type: ClusterIP
  selector:
    app: back-customer-dev
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
