k8s/dev/backend_mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo6-deployment-dev
  labels:
    app: mongo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-dev
  template:
    metadata:
      labels:
        app: mongo-dev
    spec:
      containers:
        - image: mongo:6.0
          name: mongo6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-dev
              mountPath: /data/db
      volumes:
        - name: mongo-dev
          persistentVolumeClaim:
            claimName: mongo-pvc-dev
---
apiVersion: v1
kind: Service
metadata:
  name: mongo6-service-dev
spec:
  type: ClusterIP
  selector:
    app: mongo-dev
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
