k8s/dev/backend_redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis7-deployment-dev
  labels:
    app: redis-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-dev
  template:
    metadata:
      labels:
        app: redis-dev
    spec:
      containers:
        - image: redis:7.2
          name: redis7
          ports:
            - containerPort: 6379
      volumes:
        - name: redis-dev
          persistentVolumeClaim:
            claimName: redis-pvc-dev

---
apiVersion: v1
kind: Service
metadata:
  name: redis7-service-dev
spec:
  type: ClusterIP
  selector:
    app: redis-dev
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
