k8s/dev/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-keycloak-ingress-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  rules:
    - host: manantial.dev.test
      http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-gateway-service-dev
              port:
                number: 8090
    - host: manantial.dev.test
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: keycloak-dev
              port:
                number: 80
